; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_count_selected_properties.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_count_selected_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { %struct.property* }
%struct.property = type { %struct.property* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.view*)* @count_selected_properties to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @count_selected_properties(%struct.view* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.view*, align 8
  %4 = alloca %struct.property*, align 8
  %5 = alloca i32, align 4
  store %struct.view* %0, %struct.view** %3, align 8
  %6 = load %struct.view*, %struct.view** %3, align 8
  %7 = getelementptr inbounds %struct.view, %struct.view* %6, i32 0, i32 0
  %8 = load %struct.property*, %struct.property** %7, align 8
  store %struct.property* %8, %struct.property** %4, align 8
  %9 = load %struct.property*, %struct.property** %4, align 8
  %10 = icmp ne %struct.property* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load %struct.view*, %struct.view** %3, align 8
  %13 = call i32 @count_properties(%struct.view* %12)
  store i32 %13, i32* %2, align 4
  br label %25

14:                                               ; preds = %1
  store i32 1, i32* %5, align 4
  br label %15

15:                                               ; preds = %20, %14
  %16 = load %struct.property*, %struct.property** %4, align 8
  %17 = getelementptr inbounds %struct.property, %struct.property* %16, i32 0, i32 0
  %18 = load %struct.property*, %struct.property** %17, align 8
  store %struct.property* %18, %struct.property** %4, align 8
  %19 = icmp ne %struct.property* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %15
  %21 = load i32, i32* %5, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %5, align 4
  br label %15

23:                                               ; preds = %15
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %11
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @count_properties(%struct.view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
